re-add skipped phases
Signed-off-by: Galen Emery <galen@chef.io>

--- a/.delivery/config.json
+++ b/.delivery/config.json
@@ -9,11 +9,7 @@
       "enable_cookstyle": true
     }
   },
-  "skip_phases": [
-    "provision",
-    "smoke",
-    "functional"
-  ],
+  "skip_phases": [],
   "job_dispatch": {
     "version": "v2"
   },
